TSF-3356 Mapper inn grunnlag med samme skjæringstidspunkt som origina… (#4039)
* TSF-3356 Mapper inn grunnlag med samme skjæringstidspunkt som original grunnlag som brukes i kopi

* Henter alle grunnlag for vurder refusjon samtidig